project-jenkins-deployment.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: project-aks01
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: project-aks01
  namespace: project-aks01
  labels:
    app: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dev
  template:
    metadata:
      name: project-aks01-pod
      labels:
        app: dev
    spec:
      containers:
      - name: project-aks01-container
        image: alokeacr.azurecr.io/alokeacr/project-aks01:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8501
---
apiVersion: v1
kind: Service
metadata:
  name: project-aks01-service
  namespace: project-aks01
  labels:
    service: project-aks01-service
spec:
  type: ClusterIP
  selector:
    app: dev
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8501
